# alexandria

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  RELEASING.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml  config.toml
cli/: Cargo.toml
cli/src/: android_env.rs  context.rs  main.rs  output.rs  runner.rs  tauri_config.rs
cli/src/commands/: build.rs  clean.rs  config.rs  credentials.rs  db.rs  dev.rs  health.rs  mod.rs  run.rs  synth_sentinel.rs
cli/src/synth/: bigrams.rs  blob.rs  generators.rs  mod.rs  rng.rs
crates/iroh-live/: Cargo.toml
crates/iroh-live/src/: lib.rs  live.rs  node.rs  rooms.rs  ticket.rs  util.rs
crates/iroh-moq/: Cargo.toml
crates/iroh-moq/src/: lib.rs
patches/if-watch/: Cargo.toml
patches/if-watch/src/: lib.rs
plugins/builtin/editor-cpp/grader/: Cargo.toml
plugins/builtin/editor-cpp/grader/src/: jscpp.js  lib.rs
plugins/builtin/editor-javascript/grader/: .gitignore  Cargo.toml
plugins/builtin/editor-javascript/grader/src/: lib.rs
plugins/builtin/editor-python/grader/: .gitignore  Cargo.toml  rust-toolchain.toml
plugins/builtin/editor-python/grader/.cargo/: config.toml
plugins/builtin/editor-python/grader/src/: lib.rs
plugins/builtin/editor-shared/boa-runner-core/: Cargo.toml
plugins/builtin/editor-typescript/grader/: Cargo.toml
plugins/builtin/mcq-grader/: .gitignore  Cargo.toml  README.md
plugins/builtin/mcq-grader/src/: lib.rs
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.desktop.linux.conf.json  tauri.desktop.windows.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: deploy_completion.rs  dev_seed.rs  preprod_anchor.rs  preprod_registration_roundtrip.rs  snapshot_keygen.rs  snapshot_sign.rs  snapshot_verify.rs
src-tauri/icons/: icon.icns
src-tauri/icons/source/: manifest.json
src-tauri/resources/: bootstrap_registry.json
src-tauri/resources/sentinel/: paste-v1.onnx  paste-v1.onnx.sha256  yunet.onnx.sha256
src-tauri/src/: AGENTS.md  diag.rs  lib.rs  macos_media_delegate.rs  macos_secure_input.rs
src-tauri/src/aggregation/: antigaming.rs  config.rs  independence.rs  level.rs  mod.rs  weights.rs
src-tauri/src/assessment/: grader.rs  mod.rs  randomizer.rs
src-tauri/src/cardano/: anchor_queue.rs  anchor_tx.rs  blockfrost.rs  challenge_escrow_tx_builder.rs  completion.rs  completion_tx_builder.rs  cost_models.rs  gov_onchain.rs  gov_tx_builder.rs  governance.rs  mod.rs  onchain_queue.rs  operator.rs  plutus_data.rs  plutus_mint.rs  plutus_spend.rs  policy.rs  relay_registry_chain.rs  script_refs.rs  snapshot.rs  soulbound_tx_builder.rs  stake_pubkey.rs  treasury.rs  tx_builder.rs  types.rs  username_anchor.rs
src-tauri/src/classroom/: gossip.rs  manager.rs  mod.rs  types.rs
src-tauri/src/commands/: aggregation.rs  assessment.rs  attestation.rs  auto_issuance.rs  cardano.rs  catalog.rs  challenge.rs  chapters.rs  classroom.rs  completion.rs  content 2.rs  content.rs  content_governance.rs  courses.rs  credentials.rs  elements.rs  enrollment.rs  evidence.rs  goal_templates.rs  governance.rs  graph.rs  guardian.rs  health.rs  identity.rs  instructor.rs  integrity.rs  mod.rs  opinions.rs  p2p.rs  pairing.rs  pinning.rs  plugins.rs  presentation.rs  profile.rs  ratelimit.rs  reputation.rs  role_assessment.rs  sentinel_dao.rs  sentinel_gaze.rs  sentinel_holdout.rs  (+14 more)
src-tauri/src/content_store/: cid.rs  content.rs  course.rs  fetch.rs  http.rs  mod.rs  node.rs  profile.rs  resolver.rs  storage.rs
src-tauri/src/crypto/: content_crypto.rs  did.rs  group_key.rs  guardian.rs  hash.rs  keystore.rs  keystore_portable.rs  mod.rs  pairing.rs  shamir.rs  signing.rs  wallet.rs
src-tauri/src/db/: mod.rs  schema.rs  seed.rs  seed_content.rs  seed_content_data.rs  seed_plugin_demo.rs
src-tauri/src/domain/: attestation.rs  catalog.rs  challenge.rs  classroom.rs  completion.rs  content_ratification.rs  course.rs  course_document.rs  enrollment.rs  evidence.rs  governance.rs  identity.rs  integrity_attestation.rs  mod.rs  opinions.rs  plugin.rs  profile.rs  reputation.rs  sentinel.rs  sync.rs  taxonomy.rs  username_claim.rs
src-tauri/src/domain/vc/: canonicalize.rs  context.rs  id.rs  mod.rs  sign.rs  verify.rs
src-tauri/src/ee/: LICENSE.md
src-tauri/src/evidence/: aggregator.rs  attestation.rs  challenge.rs  mod.rs  reputation.rs  taxonomy.rs  thresholds.rs
src-tauri/src/goals/: jd_parser.rs  mod.rs
src-tauri/src/ipfs/: cid.rs  content 2.rs  content.rs  course.rs  discovery.rs  fetch.rs  gateway.rs  mod.rs  node 2.rs  node.rs  pinboard.rs  profile.rs  resolver.rs  storage.rs
src-tauri/src/p2p/: archive.rs  catalog.rs  content.rs  device_id.rs  device_sync.rs  discovery.rs  evidence.rs  gossip.rs  governance.rs  graph_fetch.rs  guardian.rs  integrity_attest.rs  mod.rs  nat.rs  network.rs  opinions.rs  pinboard.rs  presentation.rs  profile_fetch.rs  rate_limit.rs  registry.rs  registry_chain.rs  relay_discovery.rs  relay_registry.rs  scoring.rs  sentinel.rs  signing.rs  stress.rs  sync.rs  taxonomy.rs  types.rs  username_reg.rs  validation.rs  vc_did.rs  vc_fetch.rs  vc_status.rs
src-tauri/src/plugins/: asset_protocol.rs  attestation.rs  bootstrap.js  builtins.rs  catalog.rs  irl_review.rs  manifest.rs  mod.rs  registry.rs  verifier.rs  wasm_runtime.rs
src-tauri/src/profile/: index.rs  manager.rs  migration.rs  mod.rs
src-tauri/src/sentinel/: active_app.rs  face_detect.rs  features.rs  gaze.rs  keystroke_ae.rs  mod.rs  mouse_cnn.rs  paste_classifier.rs  types.rs
src-tauri/src/settings/: mod.rs  registry.rs  store.rs
src-tauri/src/tutoring/: manager.rs  manager_android.rs  manager_mobile.rs  mod.rs
src-tauri/tests/: e2e_vc.rs  guardian_e2e.rs  settings_sync_e2e.rs
src-tauri/tests/e2e_vc/: aggregation.rs  anchor.rs  antigaming.rs  common.rs  did.rs  offline_peer_fetch.rs  p2p_did_status.rs  p2p_survival.rs  p2p_vc_fetch.rs  pinning.rs  presentation.rs  survivability.rs  vc_issue_verify.rs
(+582 files in other folders)
