[workspace]
resolver = "2"
members = ["src-tauri", "cli"]

# Stronghold uses scrypt internally for snapshot encryption.
# Without opt-level = 3, scrypt is 10-30x slower in debug builds,
# making vault unlock/create painfully slow during development.
[profile.dev.package.scrypt]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
