[workspace]
resolver = "2"
members = ["src-tauri", "cli"]

# Stronghold uses scrypt internally for snapshot encryption.
# Without opt-level = 3, scrypt is 10-30x slower in debug builds,
# making vault unlock/create painfully slow during development.
[profile.dev.package.scrypt]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

# ── Crate patches ─────────────────────────────────────────────────────
# if-watch 3.2.1 uses SCDynamicStore on iOS which returns NULL and panics.
# Our patch routes iOS to the fallback (timer-based) backend instead.
[patch.crates-io]
if-watch = { path = "patches/if-watch" }
audiopus_sys = { path = "patches/audiopus_sys" }

[patch."https://github.com/ifftu-dev/iroh-live"]
iroh-live = { path = "../iroh-live-patched/iroh-live" }
moq-media = { path = "../iroh-live-patched/moq-media" }
iroh-moq = { path = "../iroh-live-patched/iroh-moq" }
