[workspace]
resolver = "2"
members = ["src-tauri", "cli"]
# Built-in plugin graders compile to wasm32-unknown-unknown and live
# outside the desktop/mobile workspace so the main build doesn't try to
# pull them in for the host target. Each grader has its own Cargo.toml
# and is built via `cargo build --target wasm32-unknown-unknown --release`
# from inside its directory. The resulting `.wasm` is checked in next to
# the source so reproducibility tests don't need a wasm toolchain at
# CI time.
exclude = ["plugins"]

# Stronghold uses scrypt internally for snapshot encryption.
# Without opt-level = 3, scrypt is 10-30x slower in debug builds,
# making vault unlock/create painfully slow during development.
[profile.dev.package.scrypt]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

# ── Crate patches ─────────────────────────────────────────────────────
# if-watch 3.2.1 uses SCDynamicStore on iOS which returns NULL and panics.
# Our patch routes iOS to the fallback (timer-based) backend instead.
[patch.crates-io]
if-watch = { path = "patches/if-watch" }
audiopus_sys = { path = "patches/audiopus_sys" }
webrtc-audio-processing-sys = { path = "patches/webrtc-audio-processing-sys" }
ffmpeg-sys-next = { path = "patches/ffmpeg-sys-next" }
ffmpeg-next = { path = "patches/ffmpeg-next" }

[patch."https://github.com/ifftu-dev/iroh-live"]
iroh-live = { path = "../iroh-live-patched/iroh-live" }
moq-media = { path = "../iroh-live-patched/moq-media" }
iroh-moq = { path = "../iroh-live-patched/iroh-moq" }
