[package]
name = "alex"
version = "0.1.0"
description = "Alexandria developer CLI"
edition = "2021"
rust-version = "1.83.0"

[[bin]]
name = "alex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
owo-colors = "4"
indicatif = "0.17"
console = "0.16"
rusqlite = { version = "0.38", features = ["bundled"] }
sysinfo = "0.33"
dirs = "6"
anyhow = "1"
log = "0.4"
bytesize = "2"
serde_json = "1"
