[package]
name = "alex"
version = "0.1.0"
description = "Alexandria developer CLI"
edition = "2021"
rust-version = "1.83.0"

# Allow the `has_app_lib` cfg used by shared files (seed.rs) that gate
# test modules requiring types only available in the main Tauri crate.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(has_app_lib)'] }

[[bin]]
name = "alex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
owo-colors = "4"
indicatif = "0.17"
console = "0.16"
rusqlite = { version = "0.38", features = ["bundled"] }
sysinfo = "0.33"
dirs = "6"
anyhow = "1"
log = "0.4"
bytesize = "2"
serde_json = "1"
