[package]
name = "alex"
version = "0.1.0"
description = "Alexandria developer CLI"
edition = "2021"
rust-version = "1.83.0"

# Allow the `has_app_lib` cfg used by shared files (seed.rs) that gate
# test modules requiring types only available in the main Tauri crate.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(has_app_lib)'] }

[[bin]]
name = "alex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
owo-colors = "4"
indicatif = "0.17"
console = "0.16"
rusqlite = { version = "0.38", features = ["bundled-sqlcipher"] }
sysinfo = "0.33"
dirs = "6"
anyhow = "1"
log = "0.4"
bytesize = "2"
serde_json = "1"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# `alex credentials` shares its impl functions with the Tauri backend so
# `list_credentials_impl`, `export_bundle_impl`, `verify_bundle_offline_impl`
# stay one source of truth. The package name in src-tauri/Cargo.toml is
# `alexandria-node`; the [lib] name is `app_lib`, which is what we use
# for imports (`use app_lib::commands::credentials::*`). This pulls in
# the full app_lib transitive tree (pallas, iroh, libp2p…) which slows
# CLI builds, but it's the correctness vs ergonomics trade we're
# explicitly making per the `alex credentials` design.
alexandria-node = { path = "../src-tauri" }
