[package]
name = "alexandria-node"
version = "0.1.0"
description = "Alexandria — Decentralized Learning Platform (Desktop Node)"
authors = ["Alexandria Contributors"]
license = "TBD"
repository = "https://github.com/ifftu-dev/alexandria"
edition = "2021"
rust-version = "1.89.0"
default-run = "alexandria-node"

[features]
default = []
dev-seed = []
# Enable video support for tutoring (desktop only).
# This activates iroh-live's "video" feature which pulls in ffmpeg, nokhwa, xcap.
# On mobile builds, this feature MUST NOT be enabled. Desktop Tauri config and
# desktop build/release commands enable it explicitly where needed.
tutoring-video = ["iroh-live/video", "iroh-live/aec"]

# Enable video with statically-linked ffmpeg (for Windows/Linux CI builds without system ffmpeg).
# Activated for Linux and Windows in CI via --features tutoring-video-static.
tutoring-video-static = ["iroh-live/static", "iroh-live/aec"]

# Enable iOS video support (VideoToolbox H264 encoder/decoder, no ffmpeg).
# Activated by tauri.ios.conf.json for iOS builds.
tutoring-video-ios = ["iroh-live/video-ios"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }
cc = "1"

[dependencies]
# Tauri
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-biometry = "0.2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography (always available — needed for wallet on all platforms)
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
blake2 = "0.10"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
hkdf = "0.12"
hex = "0.4"
rand = "0.8"
bip39 = { version = "2", features = ["rand"] }

# Cardano (pallas 0.35 — always available for wallet + tx building)
pallas-wallet = "0.35"
pallas-addresses = "0.35"
pallas-crypto = "0.35"
pallas-txbuilder = "0.35"
pallas-primitives = "0.35"
pallas-traverse = "0.35"
pallas-codec = "0.35"

# LRU cache (used for gossip dedup — avoids full-clear replay window)
lru = "0.12"

# Common utilities (all platforms)
anyhow = "1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
tracing = "0.1"
tracing-log = "0.2"
libc = "0.2"
base64 = "0.21"

# Portable vault encryption (all platforms — replaces Stronghold on mobile)
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
aes-gcm = "0.10"

# Content-addressed storage (iroh embedded BLAKE3 blob store)
iroh = "0.96"
iroh-blobs = { version = "0.98", features = ["fs-store"] }

# P2P networking (libp2p swarm) — all platforms
# Uses private Alexandria DHT (/alexandria/kad/1.0) with relay bootstrap.
# mDNS removed — not useful in production (no LAN discovery needed).
libp2p = { version = "0.56.0", features = ["gossipsub", "kad", "quic", "tcp", "noise", "identify", "tokio", "ed25519", "macros", "autonat", "relay", "dcutr", "yamux"] }
futures = "0.3"

# Live tutoring — Media over QUIC (iroh-live) — ALL platforms
# Base: audio-only (default-features = false). The "video" feature is
# activated by the "tutoring-video" cargo feature which desktop Tauri config
# and desktop build/release commands enable explicitly.
iroh-gossip = "0.96"
iroh-live = { git = "https://github.com/ifftu-dev/iroh-live", rev = "a7e3e0fa8c073021d7e140813197705eb0f670fd", default-features = false }
postcard = { version = "1", features = ["alloc"] }
blake3 = "1"

# ── iOS-only dependencies ────────────────────────────────────────────
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
# Mobile uses SQLCipher too, but GitHub's mobile runners do not provide target
# OpenSSL headers/libraries for cross-compiling SQLCipher. Vendor them here.
rusqlite = { version = "0.38", features = ["bundled-sqlcipher-vendored-openssl", "uuid"] }

[target.'cfg(target_os = "ios")'.dependencies]
# ObjC runtime — for configuring WKWebView scrollView insets at startup
objc2 = "0.6"

# Image encoding (JPEG) for bridging video frames to webview (same as desktop)
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# ── Desktop-only dependencies ────────────────────────────────────────
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
# Desktop builds can link SQLCipher against the runner's native crypto stack.
rusqlite = { version = "0.38", features = ["bundled-sqlcipher", "uuid"] }

# Secure secret storage (IOTA Stronghold encrypted vault — desktop uses this instead of portable)
iota_stronghold = "2"

# Device enumeration for pre-join device checks (camera listing via nokhwa)
nokhwa = { version = "0.10", default-features = false, features = ["input-native"] }

# Image encoding (JPEG) for bridging video frames to webview
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[dev-dependencies]
tempfile = "3"

[[example]]
name = "dev_seed"
path = "examples/dev_seed.rs"
required-features = ["dev-seed"]
