[package]
name = "alexandria-node"
version = "0.4.5-alpha"
description = "Alexandria — Decentralized Learning Platform (Desktop Node)"
authors = ["Alexandria Contributors"]
license = "TBD"
repository = "https://github.com/ifftu-dev/alexandria"
edition = "2021"
rust-version = "1.89.0"
default-run = "alexandria-node"

[features]
default = []
dev-seed = []
# Enable desktop tutoring video without acoustic echo cancellation.
# This keeps Windows buildable on GitHub's MSVC runners, where the bundled
# webrtc-audio-processing autotools build is not currently stable.
tutoring-video = ["iroh-live/video"]

# Enable desktop tutoring video with acoustic echo cancellation.
# macOS/Linux release paths can opt into this when the WebRTC AEC toolchain is available.
tutoring-video-aec = ["tutoring-video", "iroh-live/aec"]

# Enable video with statically-linked ffmpeg (for Linux CI builds without system ffmpeg).
# Activated for Linux in CI via --features tutoring-video-static.
tutoring-video-static = ["iroh-live/static", "iroh-live/aec"]

# Enable Android tutoring video with statically-linked ffmpeg but without AEC.
# This keeps Android on the shared video pipeline without pulling in the
# desktop-only WebRTC AEC toolchain.
tutoring-video-android = ["tutoring-video", "iroh-live/static"]

# Enable iOS video support (VideoToolbox H264 encoder/decoder, no ffmpeg).
# Activated by tauri.ios.conf.json for iOS builds.
tutoring-video-ios = ["iroh-live/video-ios"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }
cc = "1"

[dependencies]
# Loads a local .env (dev) so BLOCKFROST_PROJECT_ID etc. are available; no-op in
# a packaged build where no .env is present.
dotenvy = "0.15"
# Tauri
tauri = { version = "2.10.0", features = ["macos-private-api", "protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-biometry = "0.2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# On-device PDF text extraction for the resume/transcript skill bootstrap.
pdf-extract = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# RFC 8785 JSON Canonicalization Scheme — used by VC signing/verification
# to produce a byte-identical representation before signing.
serde_json_canonicalizer = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography (always available — needed for wallet on all platforms)
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
blake2 = "0.10"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
hkdf = "0.12"
hex = "0.4"
bs58 = "0.5"
rand = "0.8"
bip39 = { version = "2", features = ["rand"] }

# Cardano (pallas 0.35 — always available for wallet + tx building)
pallas-wallet = "0.35"
pallas-addresses = "0.35"
pallas-crypto = "0.35"
pallas-txbuilder = "0.35"
pallas-primitives = "0.35"
pallas-traverse = "0.35"
pallas-codec = "0.35"

# LRU cache (used for gossip dedup — avoids full-clear replay window)
lru = "0.12"

# Sentinel ML (Rust backend, replaces TS+onnxruntime-web)
# tract-onnx: ONNX inference for the frozen paste classifier
# candle-core/-nn: per-user training for the keystroke AE + mouse CNN
tract-onnx = { version = "0.21", default-features = false }
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
ndarray = "0.16"

# Common utilities (all platforms)
anyhow = "1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
tracing = "0.1"
tracing-log = "0.2"
libc = "0.2"
base64 = "0.21"

# Portable vault encryption (all platforms — replaces Stronghold on mobile)
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
aes-gcm = "0.10"

# Content-addressed storage (iroh embedded BLAKE3 blob store)
iroh = "0.96"
iroh-blobs = { version = "0.98", features = ["fs-store"] }

# P2P networking (libp2p swarm) — all platforms
# Uses private Alexandria DHT (/alexandria/kad/1.0) with relay bootstrap.
# mDNS removed — not useful in production (no LAN discovery needed).
libp2p = { version = "0.56.0", features = ["gossipsub", "kad", "quic", "tcp", "noise", "identify", "tokio", "ed25519", "macros", "autonat", "relay", "dcutr", "yamux", "request-response", "cbor"] }
futures = "0.3"

# Live tutoring — Media over QUIC (iroh-live) — ALL platforms
# Base: audio-only (default-features = false). Platform-specific Tauri configs
# opt into the appropriate media feature set for release parity.
iroh-gossip = "0.96"
iroh-live = { git = "https://github.com/ifftu-dev/iroh-live", rev = "a7e3e0fa8c073021d7e140813197705eb0f670fd", default-features = false }
postcard = { version = "1", features = ["alloc"] }
blake3 = "1"

# ── Mobile + Windows SQLCipher dependencies ──────────────────────────
[target.'cfg(any(target_os = "ios", target_os = "android", target_os = "windows"))'.dependencies]
# Mobile and Windows release runners do not provide a reliable SQLCipher OpenSSL
# toolchain out of the box. Vendor OpenSSL here so builds do not depend on runner-specific paths.
rusqlite = { version = "0.38", features = ["bundled-sqlcipher-vendored-openssl", "uuid"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
# ObjC runtime — for configuring WKWebView scrollView insets (iOS) and
# enabling element fullscreen on WKPreferences (macOS).
objc2 = "0.6"
# Objective-C blocks — needed to invoke WKUIDelegate decision handlers
# (e.g. `requestMediaCapturePermissionForOrigin:`) to grant mic / camera
# access from plugin iframes.
block2 = "0.6"

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
# Image encoding (JPEG) for bridging video frames to the webview on mobile.
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# ── macOS / Linux SQLCipher dependencies ─────────────────────────────
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
# macOS/Linux desktop builds can link SQLCipher against the runner's native crypto stack.
rusqlite = { version = "0.38", features = ["bundled-sqlcipher", "uuid"] }

# ── Active-app detection (Sentinel, per-OS) ──────────────────────────
# macOS: NSWorkspace.frontmostApplication for the focused app's name + bundle id.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

# Windows: GetForegroundWindow → process image name.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

# Linux (X11): _NET_ACTIVE_WINDOW → WM_CLASS. Wayland returns None.
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

# ── Desktop-only dependencies ────────────────────────────────────────
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
# Secure secret storage (IOTA Stronghold encrypted vault — desktop uses this instead of portable)
iota_stronghold = "2"

# Single-instance: on Windows/Linux a deep link launches a second process with
# the URL in argv; this forwards it to the running instance (macOS delivers
# deep links natively via on_open_url, no second process). Desktop-only.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

# Device enumeration for pre-join device checks (camera listing via nokhwa)
nokhwa = { version = "0.10", default-features = false, features = ["input-native"] }

# Image encoding (JPEG) for bridging video frames to webview
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Phase 2 — WASM grader runtime for the community plugin system.
#
# Wasmtime is configured for deterministic execution at construction time:
# NaN canonicalization, fuel-based interruption (instead of wall-clock
# epoch deadlines), and no WASI imports for pure-compute graders. This is
# the substrate that lets any node re-run a grader on a captured submission
# bundle and reproduce the score byte-for-byte — the root of trust for
# credential-bearing assessments. wasi-virt support for graders that
# legitimately need filesystem/RNG/clock arrives in a later session along
# with the iOS AOT story (App Store JIT prohibition).
#
# Desktop-only: wasmtime v27 emits `compile_error!("unsupported platform")`
# on aarch64-apple-ios-sim and aarch64-linux-android. On mobile the grader
# is disabled at the IPC layer — the built-in-native (non-WASM) graders
# still run, and third-party WASM plugins simply can't be executed.
wasmtime = { version = "36", default-features = false, features = ["cranelift", "runtime"] }

[dev-dependencies]
tempfile = "3"
# WebAssembly text format parser — used to keep grader runtime tests
# readable by writing the test fixtures inline as WAT instead of shipping
# pre-compiled .wasm blobs in the repo.
wat = "1"

# Live Cardano preprod anchor-tx submission, used to hand-verify
# PR 16's label-1697 metadata path against a funded testnet wallet.
[[example]]
name = "preprod_anchor"
path = "examples/preprod_anchor.rs"

# CIP-33 reference-script deploy for the completion_minting validator,
# used to populate `script_refs::COMPLETION_MINTING_REF_UTXO`.
[[example]]
name = "deploy_completion"
path = "examples/deploy_completion.rs"

# Offline founder-keypair generator for bootstrap_registry.json.
# Run on an air-gapped machine; produces one .sk file + prints the
# matching pubkey hex for SNAPSHOT_VERIFIERS.
[[example]]
name = "snapshot_keygen"
path = "examples/snapshot_keygen.rs"

# Offline multisig signer for bootstrap_registry.json. Reads a snapshot
# + a founder .sk and appends one signature.
[[example]]
name = "snapshot_sign"
path = "examples/snapshot_sign.rs"

# Offline verifier for bootstrap_registry.json. Confirms the snapshot
# parses + meets quorum against the SNAPSHOT_VERIFIERS baked into
# this build.
[[example]]
name = "snapshot_verify"
path = "examples/snapshot_verify.rs"

# Live preprod round-trip for the stake-pubkey registry pipeline:
# build_registration_tx → submit → confirm → BlockfrostFetcher.fetch
# → assert entry roundtrips with valid witness.
[[example]]
name = "preprod_registration_roundtrip"
path = "examples/preprod_registration_roundtrip.rs"
