[package]
name = "iroh-live"
version = "0.1.0"
edition = "2024"
# The bundled examples/ target the old iroh 0.x API and don't build against
# iroh 1.0; they aren't part of the app. Skip auto-discovery so `cargo test`
# (which compiles examples) doesn't try to build them.
autoexamples = false
description = "audio and video live streaming over iroh"
authors = ["Franz Heinzmann <frando@n0.computer>"]
repository = "https://github.com/n0-computer/iroh-live"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
byte-unit = { version = "5.1", features = ["bit"] }
data-encoding = "2.9.0"
derive_more = { version = "2.0.1", features = ["display", "debug", "eq"] }
hang = "0.19"
image = { version = "0.25.8", optional = true, default-features = false }
iroh = "1.0.2"
iroh-gossip = "0.101"
iroh-moq = { path = "../iroh-moq" }
iroh-tickets = "1.0"
moq-lite = "0.17"
moq-media = { version = "0.1.0", path = "../moq-media", default-features = false }
n0-error = { version = "1", features = ["anyhow"] }
n0-future = "0.3.1"
n0-watcher = "0.6.0"
postcard = "1.1.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.48.0", features = ["sync"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
bytes = "1.11.0"
# iroh-smol-kv removed in the iroh 1.0 port — room presence is now carried by
# direct iroh-gossip announce messages (see rooms.rs). It was the only
# git-pinned iroh-0.96 dependency and had no iroh-1.0 release.


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = "0.33.0"
postcard = "1.1.3"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.20"

[features]
default = ["video", "aec"]

# Acoustic Echo Cancellation (requires webrtc-audio-processing which doesn't cross-compile to iOS)
aec = ["moq-media/aec"]

# Full video + audio support (requires ffmpeg, nokhwa, xcap)
video = ["moq-media/video", "dep:image"]

# iOS-only video support (VideoToolbox H264, no ffmpeg/nokhwa/xcap)
video-ios = ["moq-media/video-ios", "dep:image"]

# Enable static build of ffmpeg (implies video)
static = ["video", "moq-media/static"]
