[package]
name = "mcq-grader"
version = "1.0.0"
edition = "2021"
description = "Canonical Alexandria built-in MCQ grader (Phase 2). Compiled to wasm32-unknown-unknown and run inside the deterministic Wasmtime sandbox."
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Smaller binaries → faster cold start in Wasmtime + cheaper to ship as
# pre-pinned iroh blobs in the app bundle.
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
