[package]
name = "editor-javascript-grader"
version = "0.1.0"
edition = "2021"
description = "Deterministic JavaScript code grader/runner. Thin ABI over boa-runner-core, compiled to wasm32-unknown-unknown and run in Alexandria's empty-linker Wasmtime sandbox. The same wasm powers in-browser live eval."
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
boa-runner-core = { path = "../../editor-shared/boa-runner-core" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

# Standalone: built out-of-workspace for wasm32-unknown-unknown. The empty table
# stops cargo from attaching this crate to an ancestor workspace (matters inside
# nested git worktrees).
[workspace]
